# aeoncord

./: .gitignore  README.md  pyproject.toml  requirements.txt
aeoncord/: __init__.py  client.py  events.py
aeoncord/adapters/: __init__.py  discord_gateway.py  discord_rest.py  helpers.py  in_memory.py
aeoncord/core/: use_cases.py
aeoncord/core/domain/: exceptions.py  models.py
aeoncord/core/ports/: __init__.py  ports.py
