[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aeoncord"
version = "0.1.0"
description = "Elegant Discord API client"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "ARR"}
authors = [
    {name = "mrf0rtuna4", email = "contact.mrf0rtuna4@gmail.com"}
]
keywords = ["discord", "api", "client", "hexagonal", "clean-architecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ARR License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "attrs>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/mrf0rtuna4/aeoncord"
Repository = "https://github.com/mrf0rtuna4/aeoncord.git"
"Bug Tracker" = "https://github.com/mrf0rtuna4/aeoncord/issues"

[tool.setuptools]
packages = ["aeoncord"]

[tool.setuptools.package-data]
aeoncord = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=aeoncord --cov-report=term-plus --cov-report=html"
